# OpenGLDemoByAndroid

./: README.md  readme.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/image/filter/: filter_fragment_cool.glsl
app/src/main/cpp/: CMakeLists.txt  color.h  native-lib.cpp
app/src/main/java/com/opensource/opengl/: AppCore.java  BaseApplication.java  BaseFilter.java  CameraSurfaceActivity.java  CameraSurfaceRenderer.java  ColorActivity.java  Cube.java  FilterRenderer.java  GLUtil.java  GrayFilter.java  ImageFilterActivity.java  MainActivity.java  MyEasyRender.java  MyGLSurfaceView.java  MyGlRenderer.java  NativeTools.java  NativeWindowActivity.java  SelectActivity.java  ShaderManager.java  VaryActivity.java  VaryRenderer.java  VaryTools.java
app/src/main/java/com/opensource/opengl/filter/: ScreenFilter.java
app/src/main/java/com/opensource/opengl/utils/: CameraHelper.java  CommonUtils.java  ResReadUtils.java  ShaderUtil.java  ShaderUtils.java
app/src/main/res/layout/: activity_image_filter.xml  activity_main.xml  activity_main2.xml  activity_select.xml
app/src/main/res/raw/: camera_fragment.glsl  camera_vertex.glsl
gradle/wrapper/: gradle-wrapper.properties
